# backend/main.go
@@ -3,7 +3,6 @@ package main
 import (
 	"backend/controller"
 	"log"
-	"net/http"
 
 	"github.com/joho/godotenv"
 	"github.com/labstack/echo/v4"
@@ -22,19 +21,16 @@ func main() {
 
 	e := echo.New()
 
-	// e.Use(middleware.CORS())
+	// CORS middleware
 	e.Use(middleware.CORSWithConfig(middleware.CORSConfig{
 		AllowOrigins: []string{"http://localhost:8080"},
 		AllowHeaders: []string{echo.HeaderOrigin, echo.HeaderContentType, echo.HeaderAccept},
 	}))
 
-	e.GET("/", func(c echo.Context) error {
-		return c.String(http.StatusOK, "Hello, World!")
-	})
-
-	e.GET("/actors", controller.GetActors)
-
 	e.GET("/healthcheck", controller.GetHealthCheck)
+
+	e.GET("v1/actors", controller.GetAllActors)
+	e.GET("v1/actors/:actorId/contents", controller.GetActorContents)
 
 	e.Logger.Fatal(e.Start(":5000"))
 }
